work in progress to update to jdk17 and springboot 2.7.x